--- a/polymers/em.in
+++ b/polymers/em.in
@@ -1,9 +1,10 @@
-variable DataFile string "lmp.data"
+variable DataFile string "a.data"
 variable r_cut equal 2.0^(1.0/6.0)
 #####################################
 
 units		    lj
 
+boundary        p p p
 atom_style      bond
 special_bonds   fene
 
@@ -16,14 +17,14 @@ pair_coeff      1 1 1.0 1.0
 bond_coeff      1 30.0 1.5 1.0 1.0
 
 ## Run
-reset_timestep  0
+thermo          10
 
-dump            10 all custom 1 "em.lammpstrj" id mol xu yu zu
+dump            10 all custom 10 "./out/em.lammpstrj" id mol xu yu zu
 dump_modify     10 sort id first yes
 
-thermo          1
-minimize        1.0e-4 1.0e-6 1000 10000
+min_style       sd
+minimize        1e-4 1e-6 1000 10000
 
-write_restart   em.rst
-write_data      em.data
+write_restart   ./out/em.rst
+write_data      ./out/em.data
 
