--- a/srdPolymer_withNanoParticles/em.in
+++ b/srdPolymer_withNanoParticles/em.in
@@ -1,5 +1,15 @@
+# parameter 
 variable DataFile string "a.data"
 variable r_cut equal 2.0^(1.0/6.0)
+variable r_cut_cc equal 6.73477229
+variable delta equal 2.5  # Rnp-sigma/2=3.0-0.5=2.5
+variable epsilon equal 1.0
+variable sigma equal 1.0
+variable cc_sigma equal 6.0
+variable d_monomer equal 0.0
+variable m_monomer equal 5.0
+variable d_particle equal 6.0
+variable m_particle equal 565.486677646
 #####################################
 
 units		    lj
@@ -8,12 +18,34 @@ boundary        p p p
 atom_style      hybrid bond sphere
 special_bonds   fene
 
+pair_style      lj/expand ${r_cut_cc} 
+pair_modify     shift yes
+bond_style      fene
+special_bonds   lj 0.0 1.0 1.0
+
 read_data       ${DataFile}
 
-pair_style      lj/smooth/linear ${r_cut} 
-bond_style      fene
+# polymer
+group           small type 1
+set             group small diameter ${d_monomer}
+set             group small mass ${m_monomer}
 
-pair_coeff      * * 1.0 1.0 
+# srd
+group           solvent type 2
+set             group solvent diameter 0.0
+set             group solvent mass 1.0
+
+# Nanoparticle
+group           big type 3
+set             group big diameter ${d_particle}
+set             group big mass ${m_particle}
+
+pair_coeff      1 1 1.0 1.0 0.0 ${r_cut}
+pair_coeff      1 2 0.0 1.0 0.0 ${r_cut}
+pair_coeff      2 2 0.0 1.0 0.0 ${r_cut}
+pair_coeff      1 3 1.0 1.0 ${delta} ${r_cut}
+pair_coeff      2 3 0.0 1.0 0.0 ${r_cut}
+pair_coeff      3 3 ${epsilon} ${d_particle} ${delta} ${r_cut_cc}
 bond_coeff      1 30.0 1.5 1.0 1.0
 
 ## Run
